# claude-code-webui

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  fix_path.bat  pyproject.toml  requirements.txt  verify_claude_env.bat
.github/workflows/: release.yml
ccui_web/: app.py
ccui_web/templates/: edit_mcp.html  index.html
scripts/: check_ccui_paths.py  ensure_ccui_windows.py  mvp_write_ccui.py  mvp_write_ccui_knownfolder.py
templates/: edit.html  edit_mcp.html
tests/: test_playwright.py  test_versions.py
